--- a/contentment/contentmngmnt/pom.xml
+++ b/contentment/contentmngmnt/pom.xml
@@ -1,5 +1,5 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<?xml version="1.0" encoding="UTF-8"?>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>za.co.sideproject.contentment</groupId>
@@ -51,8 +51,9 @@
 	  </dependencies>
   </dependencyManagement>
 	<modules>
-		<module>content-inspector</module>
-	</modules>
+		 <module>content-inspector</module>
+   		 <module>content-provider</module>
+  </modules>
 	<build>
 		<plugins>
 			<plugin>
