Added content caching module. This new module is used by the content-provider module.
Signed-off-by: za-rudeboy <rudyada@gmail.com>

--- a/contentment/contentmngmnt/content-provider/pom.xml
+++ b/contentment/contentmngmnt/content-provider/pom.xml
@@ -19,6 +19,12 @@
       <artifactId>junit</artifactId>
       <scope>test</scope>
     </dependency>
+    
+    <dependency>
+    	<groupId>za.co.sideproject.contentment</groupId>
+    	<artifactId>content-cache</artifactId>
+    	<version>${project.version}</version>
+    </dependency>
     <dependency>
     	<groupId>za.co.sideproject.contentment</groupId>
     	<artifactId>content-inspector</artifactId>
