--- a/contentment/contentmngmnt/pom.xml
+++ b/contentment/contentmngmnt/pom.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>za.co.sideproject.contentment</groupId>
@@ -94,7 +93,8 @@
 		<module>content-inspector</module>
 		<module>content-provider</module>
 		<module>content-service</module>
-	</modules>
+    <module>content-cache</module>
+  </modules>
 	<build>
 		<plugins>
 			<plugin>
